Fixed spacing and contact

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,16 +54,17 @@ a {
   overflow: hidden;
   margin-bottom: 9rem;
 
-
-  &:not(#about) {
-    margin-bottom: 12rem;
-  }
-
   @media (min-width: 768px) {
     max-width: 1150px;
     margin-bottom: 18rem;
+  }
 
-    
+  &:not(#about) {
+    margin-bottom: 12rem;
+
+    @media (min-width: 768px) {
+      margin-bottom: 18rem;
+    }
   }
 }
 
@@ -73,4 +74,3 @@ a {
   padding: 0.2rem 0.8rem;
   border-radius: 999px;
 }
-
